--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.29.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
